@@ -88,6 +88,7 @@ static const char *pages[]=
 	"ISO-8859-1 (Western Europe)",
 	"ISO-8859-2 (Central Europe)",
 	"ISO-8859-7 (Greek)",
+	"ISO-8859-8 (Hebrew)",
 	"ISO-8859-9 (Turkish)",
 	"CP1256 (Arabic)",
 	"GB18030 (Chinese)",
